--- a/css/style.css
+++ b/css/style.css
@@ -146,18 +146,6 @@ input[type="radio"].visually-hidden {
   background-color: rgba(240, 197, 46, 0.5);
 }
 
-.main-navigation::after {
-  content: "";
-  position: absolute;
-  right: 460px;
-  bottom: 67px;
-
-  width: 100px;
-  height: 7px;
-
-  background-color: rgb(255, 255, 255);
-}
-
 .main-navigation ul {
   list-style: none;
 }
@@ -269,7 +257,7 @@ input[type="radio"].visually-hidden {
   display: flex;
   justify-content: space-between;
   margin: 0;
-  margin-bottom: 159px;
+  margin-bottom: 39px;
   padding: 0;
 }
 
@@ -473,31 +461,236 @@ input[type="radio"].visually-hidden {
   opacity: 0.3;
 }
 
-.sliders h3 {
+.slider {
+  position: relative;
+}
+
+.slider-item {
+  position: relative;
+
+  display: none;
+  min-height: 570px;
+
+  list-style: none;
+}
+
+.slider-controls,
+.slider input {
+  position: absolute;
+  top: 332px;
+  right: 80px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 84px;
+  height: 20px;
+}
+
+.slider-controls-item {
+  position: relative;
+  z-index: 100;
+
+  width: 18px;
+  height: 18px;
+
+  background-color: white;
+  cursor: pointer;
+}
+
+.slider-controls-item::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 10px;
+  height: 10px;
+
+  border: 1px solid black;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.slider-controls-item::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 2px;
+  height: 2px;
+
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#product-1:checked ~ .slider-controls .slider-controls-item--1::after,
+#product-2:checked ~ .slider-controls .slider-controls-item--2::after,
+#product-3:checked ~ .slider-controls .slider-controls-item--3::after {
+  border: 1px solid black;
+}
+
+#product-1:checked ~ .slider-list .slider-item:nth-child(1),
+#product-2:checked ~ .slider-list .slider-item:nth-child(2),
+#product-3:checked ~ .slider-list .slider-item:nth-child(3) {
+  display: block;
+}
+
+.slider-button {
+  margin-bottom: 55px;
+  margin-left: 43px;
+}
+
+.slider-button::before {
+  right: -40px;
+  left: -43px;
+}
+
+.slider-list {
+  position: relative;
+
+  margin: 0;
+  padding: 0;
+}
+
+.slider-item:nth-child(1) {
+  background-image: url(../img/slider-1.png);
+  background-repeat: no-repeat;
+  background-position: 90px 9px;
+}
+
+.slider-item:nth-child(2) {
+  background-image: url(../img/slider-2.png);
+  background-repeat: no-repeat;
+  background-position: 116px 21px;
+}
+
+.slider-item:nth-child(3) {
+  background-image: url(../img/slider-3.png);
+  background-repeat: no-repeat;
+  background-position: 31px 74px;
+}
+
+.slider-item::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+
+  width: 100%;
+  height: 120px;
+
+  background-color: rgb(248, 226, 150);;
+}
+
+
+.slider-wrapper {
+  width: 560px;
+  margin-bottom: 120px;
+  margin-left: auto;
+
+  list-style: none;
+}
+
+
+.slider-title {
+  position: relative;
+
+  margin: 0;
+  padding-top: 88px;
+
   font-weight: 800;
   font-size: 47px;
   line-height: 56px;
-  letter-spacing: 0.17px;
+  font-family: "Gilroy", "Arial", "Helvetica", sans-serif;
+  letter-spacing: 0.6px;
 }
 
-.sliders p {
+.slider-title::before {
+  content: "";
+  position: absolute;
+  right: 460px;
+  bottom: 147px;
+
+  width: 100px;
+  height: 7px;
+
+  background-color: rgb(255, 255, 255);
+}
+
+.slider-title::after {
+  content: "";
+  position: absolute;
+  top: -6px;
+  right: 45px;
+  z-index: -1;
+
+  font-weight: 800;
+  font-size: 179px;
+  line-height: 179.2px;
+  font-family: "Gilroy", "Arial", "Helvetica", sans-serif;
+  color: rgb(255, 255, 255);
+  letter-spacing: 3.36px;
+}
+
+.slider-item:nth-child(1) .slider-title::after {
+  content: "01";
+  top: -5px;
+  right: 47px;
+
+  letter-spacing: 1.36px;
+}
+
+.slider-item:nth-child(2) .slider-title::after {
+  content: "02";
+}
+
+.slider-item:nth-child(3) .slider-title::after {
+  content: "03";
+}
+
+.slider p {
+  margin-top: 18px;
+  margin-bottom: 49px;
+
   font-weight: 300;
   font-size: 15px;
   line-height: 30px;
+  color: rgb(70, 70, 70);
   letter-spacing: 0.15px;
+}
+
+.advantages {
+  margin-bottom: 100px;
+  margin-left: -3px;
+  padding: 0;
+
+  text-align: left;
+}
+
+.column-1 {
+  width: 155px;
+}
+
+.column-2 {
+  width: 135px;
 }
 
 .advantages tr:first-child {
   font-weight: 400;
   font-size: 36px;
   line-height: 48px;
+  font-family: "Gilroy", "Arial", "Helvetica", sans-serif;
   letter-spacing: 0.36px;
 }
 
 .advantages tr:last-child {
+  height: 29px;
+
   font-weight: 300;
   font-size: 13px;
   line-height: 20px;
+  color: rgb(70, 70, 70);
   letter-spacing: 0.13px;
 }
 
@@ -1070,7 +1263,7 @@ main h1 {
   top: 0;
   right: 100%;
   bottom: 0;
-  left: -10000px;
+  left: -50vw;
 
   background-color: rgb(239, 239, 239);
 }
@@ -1370,7 +1563,7 @@ input[type="radio"]:disabled {
   bottom: 0;
   left: 100%;
 
-  width: 10000px;
+  width: 50vw;
 
   background-color: rgb(235, 235, 235);
 }
@@ -1407,7 +1600,7 @@ input[type="radio"]:disabled {
   top: 0;
   right: 100%;
   bottom: 0;
-  left: -10000px;
+  left: -50vw;
 
   background-color: rgb(219, 219, 219);
 }
