убрал лишнее семейство шрифтов

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   font-weight: 300;
   font-size: 15px;
   line-height: 30px;
-  font-family: "Open Sans", "Arial", "Helvetica", sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   color: rgb(0, 0, 0);
 
   background-color: rgb(255, 255, 255);
